--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -1,1 +1,58 @@
-login.html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>SMS Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</head>
+<body>
+    <form method="POST" action="">
+        <div class="row">
+            <div class="col s12 l4 offset-l4">
+                <div class="card">
+
+                    <div class="card-action teal lighten-2 white-text">
+                        <h3>Login to SMS</h3>
+                    </div>
+
+                    <div class="card-content">
+                        <div class="input-field">
+                            <i class="material-icons prefix">account_circle</i>
+                            <label for="username">Username</label>
+                            <input type="text" id="username"required/>
+                        </div>
+
+                        <div class="input-field">
+                                <i class="material-icons prefix">lock</i>
+                                <label for="password">Password</label>
+                                <input type="password" id="password"required/>
+                        </div>
+
+                        <div class="form-field center-align">
+                                <button class="btn-large waves-effect waves-light teal lighten-2" style="width: 70%; font-size: larger" onclick="getInfo()">LOGIN</button>
+                        </div>
+
+                        <div class="form-field">
+                            <br><p align="center">Haven't registered? <a href="./register.html"><button class="btn-floating teal lighten-2"><i class="material-icons">add</i></button></a></p>
+                        </div>
+                    </div>
+                
+                </div>
+            </div>
+        </div>
+    </form>
+<script>
+
+function getInfo(){
+    const username = document.querySelector("#username").value;
+    const password = document.querySelector("#password").value;
+    console.log("You username is "+ username+ " and your password is " + password);
+}
+
+</script>
+</body>
+</html>
