--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -1,58 +1,52 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SMS Login</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</head>
-<body>
-    <form method="POST" action="">
-        <div class="row">
-            <div class="col s12 l4 offset-l4">
-                <div class="card">
+{% extends 'main/base.html' %}
+{% load staticfiles %}
+{% block title %}
+Login
+{% endblock %}
 
-                    <div class="card-action teal lighten-2 white-text">
-                        <h3>Login to SMS</h3>
-                    </div>
+{% block body %}
+<form method="POST" action="{% url 'user_login' %}">
+  {% csrf_token %}
+  <div class="row">
+    <div class="col s12 l4 offset-l4">
+      <div class="card">
 
-                    <div class="card-content">
-                        <div class="input-field">
-                            <i class="material-icons prefix">account_circle</i>
-                            <label for="username">Username</label>
-                            <input type="text" id="username"required/>
-                        </div>
-
-                        <div class="input-field">
-                                <i class="material-icons prefix">lock</i>
-                                <label for="password">Password</label>
-                                <input type="password" id="password"required/>
-                        </div>
-
-                        <div class="form-field center-align">
-                                <button class="btn-large waves-effect waves-light teal lighten-2" style="width: 70%; font-size: larger" onclick="getInfo()">LOGIN</button>
-                        </div>
-
-                        <div class="form-field">
-                            <br><p align="center">Haven't registered? <a href="./register.html"><button class="btn-floating teal lighten-2"><i class="material-icons">add</i></button></a></p>
-                        </div>
-                    </div>
-                
-                </div>
-            </div>
+        <div class="card-action teal lighten-2 white-text">
+          <h3>Login</h3>
         </div>
-    </form>
-<script>
 
-function getInfo(){
-    const username = document.querySelector("#username").value;
-    const password = document.querySelector("#password").value;
-    console.log("You username is "+ username+ " and your password is " + password);
-}
+        <div class="card-content">
+          <div class="input-field">
+            <i class="material-icons prefix">account_circle</i>
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" required />
+          </div>
 
-</script>
-</body>
-</html>
+          <div class="input-field">
+            <i class="material-icons prefix">lock</i>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" required />
+          </div>
+
+          <div class="form-field center-align">
+            <button class="btn-large waves-effect waves-light teal lighten-2" style="width: 70%; font-size: larger"
+              onclick="getInfo()">LOGIN</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
+<div class="row">
+  <br>
+  <a href={% url 'user_forgot_password' %}>
+    <p align="center">Forgot Password?
+  </a></p>
+  <br>
+  <a href={% url 'register' %}>
+    <p align="center">Haven't registered? <button class="btn-floating teal lighten-2">
+        <i class="material-icons">add</i>
+      </button>
+  </a></p>
+</div>
+{% endblock %}
