--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -1,52 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Register</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</head>
-<body>
-    <form method="POST" action="">
-        <div class="row">
-            <div class="col s12 l4 offset-l4">
-                <div class="card">
+{% extends 'main/base.html' %}
+{% load staticfiles %}
+{% block title %}
+Registration
+{% endblock %}
 
-                    <div class="card-action teal lighten-2 white-text">
-                            <h3>Registeration</h3>
-                    </div>
+{% block body %}
+<form method="POST" action="{% url 'register' %}">
+  {% csrf_token %}
+  <div class="row">
+    <div class="col s12 l4 offset-l4">
+      <div class="card">
 
-                    <div class="card-content">
-                            <div class="input-field">
-                                    <i class="material-icons prefix">email</i>
-                                    <label for="email">E-mail address</label>
-                                    <input type="text" id="email"/>
-                                </div>
-                        
-                        <div class="input-field">
-                            <i class="material-icons prefix">account_circle</i>
-                            <label for="username">Username</label>
-                            <input type="text" id="username"required/>
-                        </div>
-        
-                        <div class="input-field">
-                                <i class="material-icons prefix">lock</i>
-                                <label for="password">Password</label>
-                                <input type="password" id="password"required/>
-                        </div>
-
-                        <div class="form-field center-align">
-                                <button class="btn-large waves-effect waves-light teal lighten-2" style="width: 70%; font-size: large" onclick="getInfo()">REGISTER</button>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
+        <div class="card-action teal lighten-2 white-text">
+          <h3>Registration</h3>
         </div>
-    </form>
-</body>
-</html>
+
+        <div class="card-content">
+          <div class="input-field">
+            <i class="material-icons prefix">email</i>
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" />
+          </div>
+
+          <div class="input-field">
+            <i class="material-icons prefix">person</i>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required />
+          </div>
+
+          <div class="input-field">
+            <i class="material-icons prefix">account_circle</i>
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required />
+          </div>
+
+          <div class="input-field">
+            <i class="material-icons prefix">lock</i>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required />
+          </div>
+
+          <div class="form-field center-align">
+            <button class="btn-large waves-effect waves-light teal lighten-2"
+              style="width: 70%; font-size: large">Register</button>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+</form>
+{% endblock %}
