Fixed User Password Forgot Process

--- a/main/templates/main/user_forgot_password.html
+++ b/main/templates/main/user_forgot_password.html
@@ -16,14 +16,19 @@ Forgot Password
         </div>
 
         <div class="card-content">
+          <div class="text">
+            <span>
+              {{ message }}
+            </span>
+          </div>
           <div class="input-field">
             <i class="material-icons prefix">email</i>
             <label for="email">E-mail</label>
             <input type="email" id="email" name="email" />
           </div>
           <div class="form-field center-align">
-            <button class="btn-large waves-effect waves-light teal lighten-2" style="width: 70%; font-size: larger"
-              onclick="getInfo()">Get new password</button>
+            <button class="btn-large waves-effect waves-light teal lighten-2" style="width: 70%; font-size: larger">Get
+              new password</button>
           </div>
         </div>
       </div>
