--- a/main/templates/allauth/account/signup.html
+++ b/main/templates/allauth/account/signup.html
@@ -5,7 +5,7 @@ Registration
 {% endblock %}
 
 {% block body %}
-<form method="POST" action="{% url 'register' %}">
+<form method="POST" id="signup_form" action="{% url 'account_signup' %}">
   {% csrf_token %}
   <div class="row">
     <div class="col s12 l4 offset-l4">
@@ -19,7 +19,7 @@ Registration
           <div class="input-field">
             <i class="material-icons prefix">email</i>
             <label for="email">E-mail</label>
-            <input type="email" id="email" name="email" />
+            <input type="email" name="email" placeholder="E-mail address" required id="id_email">
           </div>
 
           <div class="input-field">
@@ -31,13 +31,14 @@ Registration
           <div class="input-field">
             <i class="material-icons prefix">account_circle</i>
             <label for="username">Username</label>
-            <input type="text" id="username" name="username" required />
+            <input type="text" name="username" placeholder="Username" autofocus="autofocus" minlength="1" maxlength="150" required
+              id="id_username">
           </div>
 
           <div class="input-field">
             <i class="material-icons prefix">lock</i>
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required />
+            <input type="password" name="password1" placeholder="Password" required id="id_password1">
           </div>
 
           <div class="form-field center-align">
