url endpoints added

--- a/main/templates/allauth/account/login.html
+++ b/main/templates/allauth/account/login.html
@@ -52,7 +52,7 @@ Login
   </a></p>
   <p align="center"><a href="{% provider_login_url 'google' %}">Log In with Google</a></p>
   <br>
-  <a href="{{ signup_url }}"">
+  <a href="{{ signup_url }}">
     <p align="center">Haven't registered? <button class="btn-floating teal lighten-2">
         <i class="material-icons">add</i>
       </button>
