--- a/main/templates/allauth/account/password_reset.html
+++ b/main/templates/allauth/account/password_reset.html
@@ -38,7 +38,7 @@ Forgot Password
 </form>
 <div class="row">
     <br>
-    <a href={% url 'user_login' %}>
+    <a href="{{ login_url }}"">
         <p align="center">Head back to Login
     </a></p>
 </div>
