error messages are displayed now

--- a/main/templates/allauth/account/password_reset.html
+++ b/main/templates/allauth/account/password_reset.html
@@ -25,6 +25,7 @@ Forgot Password
                         <i class="material-icons prefix">email</i>
                         <label for="email">E-mail</label>
                         <input type="email" id="email" name="email" />
+                        {{form.email.errors}}
                     </div>
                     <div class="form-field center-align">
                         <button class="btn-large waves-effect waves-light teal lighten-2"
