--- a/main/templates/allauth/account/login.html
+++ b/main/templates/allauth/account/login.html
@@ -16,7 +16,20 @@ Login
         <div class="card-action teal lighten-2 white-text">
           <h3>Login</h3>
         </div>
-
+        {% if form.errors %}
+          {% for field in form %}
+            {% for error in field.errors %}
+              <div class="alert alert-error">
+                <strong>{{ error|escape }}</strong>
+              </div>
+              {% endfor %}
+              {% endfor %}
+              {% for error in form.non_field_errors %}
+              <div class="alert alert-error">
+                <strong>{{ error|escape }}</strong>
+              </div>
+          {% endfor %}
+        {% endif %}
         <div class="card-content">
           <div class="input-field">
             <i class="material-icons prefix">account_circle</i>
