--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -2,19 +2,34 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% block title %}{% endblock %}- SMS 2019</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  </head>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>{% block title %}{% endblock %}- SMS 2019</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <body>
-    {% block body %}
-    {% endblock %}
-  </body>
+		<link rel="stylesheet" type="text/css" href="{% static 'css/template.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/game.css' %}">		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		
+		<meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+		<link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+		
+		<script type="text/javascript" src="{% static 'js/userDetails.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/profile.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/conversionRate.js' %}"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	</head>
+
+	<body>
+		{% block body %}
+		{% endblock %}
+	</body>
 
 </html>
