--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Profile</title>
-	<meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
-	<link rel="stylesheet" type="text/css" href='main/css/template.css'>
-	<script type="text/javascript" src='main/js/userDetails.js'></script>
-	<script type="text/javascript" src='main/js/profile.js'></script>
-	<script type="text/javascript" src='main/js/conversionRate.js'></script>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
-</head>
+{% extends 'main/base.html' %}
+{% load staticfiles %}
+
+{% block title %}
+Profile
+{% endblock %}
+
+
+{% block body %}
 <body>
 
 	<div class="container-fluid">
@@ -53,13 +46,13 @@
 		<div id="mySidenav" class="sidenavbar">
 			<a class="links" href="#" style="font-size: 40px;">SMS</a>
 			<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-			<a class="links" href='/profile'>Portfolio</a><hr>
-			<a class="links" href='/game'>Market</a><hr>
-			<a class="links" href='/leaderboard'>Leaderboard</a><hr>
-			<a class="links" href='/news'>News </a><hr>
-			<a class="links" href='/logout'>Logout</a><hr>
+			<a class="links" href='/profile/'>Portfolio</a><hr>
+			<a class="links" href='/'>Market</a><hr>
+			<a class="links" href=''>Leaderboard</a><hr>
+			<a class="links" href=''>News </a><hr>
+			<a class="links" href='/accounts/logout/'>Logout</a><hr>
 		</div>
 	</div>
 
 </body>
-</html>
+{% endblock %}
