--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -7,17 +7,21 @@ Game
 
 
 {% block body %}
+
 <body>
 
     <div class="container-fluid">
         <div class="row teal" style="padding: 20px">
             <div class="col s4" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
-            <div class="col s4 center-align" id="heading" style="color: white;font-family: 'Muli', sans-serif;font-size:2.2vw">STOCK MARKET SIMULATION</div>
+            <div class="col s4 center-align" id="heading"
+                style="color: white;font-family: 'Muli', sans-serif;font-size:2.2vw">STOCK MARKET SIMULATION</div>
             <div class="col s4 center-align" id="balance" style="color: white;">user balance: {{Balance}}</div><br><br>
-            <a href="" id="indian" class="col s4 offset-s1 hoverable center-align #004d40 teal darken-4" style="padding: 5px;border-radius:10px;">
+            <a href="" id="indian" class="col s4 offset-s1 hoverable center-align #004d40 teal darken-4"
+                style="padding: 5px;border-radius:10px;">
                 <div style="color: white;font-family: 'Muli', sans-serif;">Indian</div>
             </a>
-            <a href="" id="international" class="col s4 offset-s2 hoverable center-align #004d40 teal darken-4" style="color: white;padding: 5px;border-radius:10px;">
+            <a href="" id="international" class="col s4 offset-s2 hoverable center-align #004d40 teal darken-4"
+                style="color: white;padding: 5px;border-radius:10px;">
                 <div style="color: white;font-family: 'Muli', sans-serif;">International</div>
             </a>
         </div>
@@ -32,11 +36,16 @@ Game
         <div id="mySidenav" class="sidenavbar">
             <a class="links" href="#" style="font-size: 40px;">SMS</a>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a class="links" href='/profile/'>Portfolio</a><hr>
-            <a class="links" href='/'>Market</a><hr>
-            <a class="links" href=''>Leaderboard</a><hr>
-            <a class="links" href=''>News </a><hr>
-            <a class="links" href='/accounts/logout/'>Logout</a><hr>
+            <a class="links" href='/profile/'>Portfolio</a>
+            <hr>
+            <a class="links" href='/'>Market</a>
+            <hr>
+            <a class="links" href=''>Leaderboard</a>
+            <hr>
+            <a class="links" href=''>News </a>
+            <hr>
+            <a class="links" href='/accounts/logout/'>Logout</a>
+            <hr>
         </div>
     </div>
 
