Minor fixes to pop up front

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -37,7 +37,7 @@ Game
                     </div>
                 <div class="col s4 center-align">10</div>
             </div>
-            <div class="panel row #b0bec5 blue-grey lighten-3" style="background: #90a4ae">
+            <div class="panel row #e1bee7 purple lighten-4">
                 <button class="buy col s2 offset-s3" onclick="openBuySellDiv()" style="padding: 7px">BUY</button>
                 <button class="sell col s2 offset-s2" onclick="openBuySellDiv()" style="padding: 7px">SELL</button>
             </div>
@@ -60,6 +60,7 @@ Game
             <a class="links" href='/accounts/logout/'>Logout</a><hr>
         </div>
     </div>
+    <script type="text/javascript" src="{% static 'js/gamePage.js' %}"></script>
 
 
 </body>
