--- a/main/static/css/game.css
+++ b/main/static/css/game.css
@@ -33,6 +33,8 @@
     position: relative;
     top: -3.1vh;
     background: grey;
+    border-radius: 10px;
+    background: purple;
 }
 
 .buy, .sell
@@ -40,7 +42,6 @@
     margin-bottom: 5px;
     background: black;
     color: white;
-    padding: 10px;
     border: none;
     cursor: pointer;
 }
