--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -1,11 +1,33 @@
-{% extends 'main/base.html' %}
-{% load staticfiles %}
+<html>
+        {% load static %}
+<head>
+       
+        <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>{% block title %}{% endblock %}- SMS 2019</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block title %}
-Game
-{% endblock %}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/template.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/game.css' %}">		
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        
+        <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            
+</head>
 
-{% block body %}
 <body>
 
     <div class="container-fluid">
@@ -13,11 +35,11 @@ Game
             <div class="col s4" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
             <div class="col s4 center-align" id="heading" style="color: white;font-family: 'Roboto', sans-serif;font-size:2.2vw">STOCK MARKET SIMULATION</div>
             <div class="col s4 center-align" id="balance" style="color: white;font-family: 'Lato', sans-serif;">User Balance: {{Balance}}</div><br><br>
-            <a href="/" id="indian" class="col s4 offset-s1 center-align" style="padding: 5px;border-radius:10px;">
-                <div class="#8e24aa purple darken-1" style="color:white;font-family: 'Raleway', sans-serif;border-radius: 10px;">Indian</div>
+            <a href="#" id="indian" class="col s4 offset-s1 center-align" style="padding: 5px;border-radius:10px;">
+                <div class="#8e24aa purple darken-1" id="indian1" style="color:white;font-family: 'Raleway', sans-serif;border-radius: 10px;">Indian</div>
             </a>
-            <a href="/" id="international" class="col s4 offset-s2 center-align" style="color: white;padding: 5px;border-radius:10px;">
-                <div class="#8e24aa purple darken-1" style="font-family: 'Raleway', sans-serif;border-radius: 10px;">International</div>
+            <a href="#" id="international" class="col s4 offset-s2 center-align" style="color: white;padding: 5px;border-radius:10px;">
+                <div class="#8e24aa purple darken-1" id="international1" style="font-family: 'Raleway', sans-serif;border-radius: 10px;">International</div>
             </a>
         </div>
 
@@ -67,11 +89,10 @@ Game
             <a class="links" href='/accounts/logout/'>Logout</a><hr>
         </div>
     </div>
-    <script type="text/javascript" src="{% static 'js/gamePage.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'js/useless.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/game.js' %}"></script>
 
 
 </body>
-{% endblock %}
+</html>
