--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -1,13 +1,33 @@
-{% extends 'main/base.html' %}
+<html>
 {% load staticfiles %}
 
-{% block title %}
-Profile
-{% endblock %}
-
-
-{% block body %}
 <body>
+
+	<head>
+		<meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>{% block title %}{% endblock %}- SMS 2019</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link rel="stylesheet" type="text/css" href="{% static 'css/template.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'css/game.css' %}">		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+		
+		<meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+		<link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	</head>
 
 	<div class="container-fluid">
     	<!-- <div class="header header1 lighten-2"> -->
@@ -16,7 +36,7 @@ Profile
             <span style="font-size:2vw;cursor:pointer;z-index:100" onclick="openNav()">&#9776;</span>
             <div class="row">
                 <div class="col s4 center-align bottom flow-text">{{username}}</div>
-                <div class="col s4 center-align bottom flow-text">user balance: {{Balance}}</div>
+				<div class="col s4 center-align bottom flow-text">user balance: {{Balance}}</div>
                 <div class="col s4 center-align bottom flow-text">1 dollar = rupees <span id="conversionRate"></span><span id="conversionRate"></span></div>
             </div>
         </div>
@@ -54,5 +74,9 @@ Profile
 		</div>
 	</div>
 
+	
+	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+	crossorigin="anonymous"></script>
+		<script src = "{% static 'js/profile.js' %}"></script>
 </body>
-{% endblock %}
+</html>
