--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -49,33 +49,39 @@
                 <div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">STOCK PRICE</div>
             </div>
 
-            <div class="accordion row #e1bee7 purple lighten-4">
-                <div class="col s4 center-align offset-s2">
-                    <span class="valign nameOfStock">Apple</span>
-                        <!-- <i class="small material-icons upColor" style="transform: scale(0.5) translateY(5px);"><b><b>arrow_upward</b></b>
-                        </i> -->
-                        <i class="small material-icons downColor" style="transform: scale(0.5) translateY(5px);"><b><b>arrow_downward</b></b>
-                        </i>
-                    </div>
-                <div class="col s4 center-align">10</div>
-            </div>
-            <div class="panel row #e1bee7 purple lighten-4">
-                <button class="buy col s2 offset-s3" onclick="openBuyDiv()" style="padding: 7px">BUY</button>
-                <button class="sell col s2 offset-s2" onclick="openSellDiv()" style="padding: 7px">SELL</button>
-            </div>
+            <div class="stock_list">
+                <div class="accordion row #e1bee7 purple lighten-4">
+                    <div class="col s4 center-align offset-s2">
+                        <span class="valign nameOfStock">Apple</span>
+                            <!-- <i class="small material-icons upColor" style="transform: scale(0.5) translateY(5px);"><b><b>arrow_upward</b></b>
+                            </i> -->
+                            <i class="small material-icons downColor" style="transform: scale(0.5) translateY(5px);"><b><b>arrow_downward</b></b>
+                            </i>
+                        </div>
+                    <div class="col s4 center-align">10</div>
+                </div>
+                <div class="panel row #e1bee7 purple lighten-4">
+                    <button class="buy col s2 offset-s3" onclick="openBuyDiv()" style="padding: 7px">BUY</button>
+                    <button class="sell col s2 offset-s2" onclick="openSellDiv()" style="padding: 7px">SELL</button>
+                </div>
+
+
+            </div>            
+        </div>
+            
         </div>
 
         <div id="buyDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeBuyDiv()">&times;</a>
             <p class="flow-text" style="color:white;transform: translateY(-5px)">Buy</p>
-            <input type="number" name="number" placeholder="Enter the number of stocks to buy/sell" style="color: white">
+            <input type="number" id="number" name="number" placeholder="Enter the number of stocks to buy/sell" style="color: white">
             <input type="submit" class="editable" id="submit_buy">
         </div>
 
         <div id="sellDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeSellDiv()">&times;</a>
             <p class="flow-text" style="color:white;transform: translateY(-5px)">Sell</p>
-            <input type="number" name="number" placeholder="Enter the number of stocks to buy/sell" style="color: white">
+            <input type="number" ID="number1" name="number" placeholder="Enter the number of stocks to buy/sell" style="color: white">
             <input type="submit" class="editable" id="submit_sell">
         </div>
 
@@ -94,8 +100,6 @@
         crossorigin="anonymous"></script>
         <script type="text/javascript" src="{% static 'js/game.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/profile.js' %}"></script>
-
-    
 
 </body>
 </html>
