Django ModelAdmin Styling

--- a/main/templates/main/game.html
+++ b/main/templates/main/game.html
@@ -83,7 +83,7 @@
         <div id="buyDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeBuyDiv()">&times;</a>
             <p class="flow-text" style="color:white;transform: translateY(-5px)">Buy</p>
-            <input type="number" id="number" name="number" placeholder="Enter the number of stocks to buy/sell"
+            <input type="number" id="number" name="number" placeholder="Units to Buy"
                 style="color: white">
             <input type="submit" class="editable" id="submit_buy">
         </div>
@@ -91,7 +91,7 @@
         <div id="sellDiv" class="#00000 black">
             <a href="javascript:void(0)" class="closeBuySellDiv" onclick="closeSellDiv()">&times;</a>
             <p class="flow-text" style="color:white;transform: translateY(-5px)">Sell</p>
-            <input type="number" ID="number1" name="number" placeholder="Enter the number of stocks to buy/sell"
+            <input type="number" ID="number1" name="number" placeholder="Units to Sell"
                 style="color: white">
             <input type="submit" class="editable" id="submit_sell">
         </div>
