--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -14,6 +14,10 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 		<meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
@@ -28,10 +32,8 @@
 		<script type="text/javascript" src="{% static 'js/userDetails.js' %}"></script>
 		<script type="text/javascript" src="{% static 'js/profile.js' %}"></script>
 		<script type="text/javascript" src="{% static 'js/conversionRate.js' %}"></script>
-		<script type="text/javascript" src="{% static 'js/gamePage.js' %}"></script>
+		<script type="text/javascript" src="{% static 'js/game.js' %}"></script>
 		<script type="text/javascript" src="{% static 'js/useless.js' %}"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
 
 	<body>
