--- a/main/static/css/game.css
+++ b/main/static/css/game.css
@@ -5,9 +5,11 @@
     overflow-x: hidden;
 }
 
-.heading
+#heading
 {
-    font-family: 'Raleway', sans-serif;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.2vw;
 }
 
 #indian:hover
@@ -166,11 +168,44 @@ i.icon-blue {
     color: #9c27b0;
 }
 
+@media screen and (max-width: 500px) {
+    #buyDiv
+    {
+        width: 60vw;
+    }
+
+    .closeBuySellDiv
+    {
+        position: relative;
+        left: 50vw;
+    }
+
+    #heading
+    {
+        font-size: 4vw;
+    }
+}
+
 @media screen and (max-width: 400px) {
     #heading {
         font-size: 10px;
     }
     #balance {
         font-size: 10px;
+    }
+    #buyDiv
+    {
+        width: 60vw;
+    }
+
+    .closeBuySellDiv
+    {
+        position: relative;
+        left: 50vw;
+    }
+
+    #heading
+    {
+        font-size: 4vw;
     }
 }
