Registration/Login/Password Change Template Fix. Balance Query Changes

--- a/main/templates/main/user_forgot_password.html
+++ b/main/templates/main/user_forgot_password.html
@@ -1,10 +1,19 @@
-{% extends 'main/base.html' %}
-{% load staticfiles %}
-{% block title %}
-Forgot Password
-{% endblock %}
+<html>
+  {% load staticfiles %}
+  {% load socialaccount %}
 
-{% block body %}
+  <head>
+    <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>SMS 2019</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <meta charset="utf-8" name="viewport" content=" width = device-width, initial-scale = 1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  </head>
+  <body>
 <form method="POST" action="{% url 'user_forgot_password' %}">
   {% csrf_token %}
   <div class="row">
@@ -41,4 +50,4 @@ Forgot Password
     <p align="center">Head back to Login
   </a></p>
 </div>
-{% endblock %}
+</body>
