--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -34,8 +34,8 @@
         <div class="container-fluid">
             <div class="#000000 black row" style="padding: 20px">
                 <div class="col s3" onclick="openNav()" style="color: white;cursor:pointer;">&#9776;</div>
-                <div class="col s6 center-align" id="heading">STOCK MARKET SIMULATION</div>
-                <div class="col s3 center-align" id="balance" style="color: white;font-family: 'Lato', sans-serif;">User Balance: {{Balance}}</div><br><br>
+                <div class="col s6 center-align" id="heading">Portfolio</div>
+                <div class="col s3 center-align" id="balance" style="color: white;font-family: 'Lato', sans-serif;"></div><br><br>
                 <a href="#" id="indian" class="col s4 offset-s1 center-align" style="padding: 5px;border-radius:10px;">
                     <div class="#8e24aa purple darken-1" id="indian1"
                         style="color:white;font-family: 'Raleway', sans-serif;border-radius: 10px;">Indian</div>
@@ -49,10 +49,12 @@
 
             <div class="container">
                 <div class="row #ab47bc purple lighten-1 hoverable z-depth-2">
-                    <div class="col s4 center-align offset-s2 flow-text white-text"
+                    <div class="col s4 center-align flow-text white-text"
                         style="font-family: 'Raleway', sans-serif;">STOCK NAME</div>
                     <div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
                         STOCK PRICE</div>
+                    <div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
+                        UNITS</div>
                 </div>
 
                 <div class="stock_list">
