--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -54,7 +54,7 @@
                     <div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
                         STOCK PRICE</div>
                     <div class="col s4 center-align flow-text white-text" style="font-family: 'Raleway', sans-serif;">
-                        UNITS</div>
+                        UNITS OWNED</div>
                 </div>
 
                 <div class="stock_list">
